TSG S6b: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -5,8 +5,9 @@
     name= _ "The Long March"
     next_scenario=07b_Pebbles_in_the_Flood
 
-    {SCENARIO_MUSIC heroes_rite.ogg}
-    {EXTRA_SCENARIO_MUSIC the_dangerous_symphony.ogg}
+    {SCENARIO_MUSIC casualties_of_war.ogg}
+    {EXTRA_SCENARIO_MUSIC underground.ogg}
+    {EXTRA_SCENARIO_MUSIC weight_of_revenge.ogg}
 
     # Note: the map contains a large grid of roads but only one path through the
     # forest will be picked when the scenario starts. When editing the map, make
@@ -19,7 +20,7 @@
     {DEFAULT_SCHEDULE_DUSK}
 
     victory_when_enemies_defeated=no
-    {TURNS 30 25 20}
+    {TURNS 25 22 20}
 
     {TSG_BIGMAP {JOURNEY_06B_NEW} }
 
@@ -43,7 +44,7 @@
         share_view=yes
         share_maps=yes
 
-        {GOLD 125 100 80}
+        {GOLD 60 50 40}
         {INCOME 6 4 2}
 
         canrecruit=yes
@@ -126,14 +127,16 @@
         {VARIABLE secret_path.x 18}
         {VARIABLE secret_path.y 35}
 
+
+    # the first undead will spawn on this turn+1 (i.e. turn {5 4 3})
 #ifdef EASY
-        {VARIABLE first_undead_spawn_turn 3}
+        {VARIABLE first_undead_spawn_turn 4}
 #endif
 #ifdef NORMAL
-        {VARIABLE first_undead_spawn_turn 2}
+        {VARIABLE first_undead_spawn_turn 3}
 #endif
 #ifdef HARD
-        {VARIABLE first_undead_spawn_turn 1}
+        {VARIABLE first_undead_spawn_turn 2}
 #endif
 
         [while]
@@ -145,7 +148,7 @@
             [do]
                 [if]
                     [have_location]
-                        terrain=R*
+                        terrain=R*^*
 
                         [filter_adjacent_location]
                             x,y=$new_path_hex.x,$new_path_hex.y
@@ -159,7 +162,7 @@
 
                     [then]
                         [store_locations]
-                            terrain=R*
+                            terrain=R*^*
 
                             [filter_adjacent_location]
                                 x,y=$new_path_hex.x,$new_path_hex.y
@@ -176,7 +179,7 @@
 
                     [else]
                         [store_locations]
-                            terrain=R*
+                            terrain=R*^*
 
                             [filter_adjacent_location]
                                 x,y=$new_path_hex.x,$new_path_hex.y
@@ -246,7 +249,7 @@
         [/store_locations]
 
         [store_locations]
-            terrain=R*
+            terrain=R*^*
             y=10-35
 
             variable=secret_path_to_hide
@@ -284,14 +287,14 @@
             x=$ford_mask_x
             y=3
             border=no
-            mask="Ww, Wwf, Ww
+            mask="Ww^Ewl, Wwf, Ww^Ewl
+Ww, Wwf, Ww^Ewl
+Ww^Ewl, Wwf, Ww^Ewl
 Ww, Wwf, Ww
-Ww, Wwf, Ww
-Ww, Wwf, Ww
-Ww, Wwf, Ww
-Ww, Wwf, Ww
-Ww, Wwf, Ww
-Ww, Wwf, Ww
+Ww, Wwf, Ww^Ewl
+Ww, Wwf, Ww^Ewl
+Ww^Ewl, Wwf, Ww
+Ww^Ewl, Wwf, Ww^Ewl
 "
 
             [rule]
@@ -320,16 +323,6 @@ _f, _f, Re, _f
             [/rule]
         [/terrain_mask]
 
-        {NAMED_GENERIC_UNIT 3 (Naga Warrior) $new_path_hex.x 6 (Fssth) (_"Fssth")} {GUARDIAN}
-
-#ifdef NORMAL
-        {NAMED_GENERIC_UNIT 3 (Naga Fighter) $new_path_hex.x 6 (Wizzi) (_"Wizzi")} {GUARDIAN}
-#endif
-
-#ifdef HARD
-        {NAMED_GENERIC_UNIT 3 (Naga Warrior) $new_path_hex.x 6 (Wizzi) (_"Wizzi")} {GUARDIAN}
-#endif
-
         {CLEAR_VARIABLE new_road_branches,secret_path_to_hide,adjacent_forests}
 
         {VARIABLE urza_dialogue 0}
@@ -339,15 +332,15 @@ _f, _f, Re, _f
         name=prestart
 
 #ifdef EASY
-        {VARIABLE num_of_ambushers 12}
+        {VARIABLE num_of_ambushers 8}
 #endif
 
 #ifdef NORMAL
-        {VARIABLE num_of_ambushers 16}
+        {VARIABLE num_of_ambushers 12}
 #endif
 
 #ifdef HARD
-        {VARIABLE num_of_ambushers 20}
+        {VARIABLE num_of_ambushers 16}
 #endif
 
         # This places a bunch of lvl1 elves along the secret path, the player
@@ -412,7 +405,7 @@ _f, _f, Re, _f
         # player will mostly only bump into these if he wanders away from the
         # path, although a few might occasionally be close enough to join an
         # ambush by the lvl1 elves next to the path.
-        {SCATTER_UNITS 30 "Elvish Hero,Elvish Captain,Elvish Marksman,Elvish Ranger,Elvish Druid,Elvish Sorceress" 2 (
+        {SCATTER_UNITS 30 "Elvish Hero,Elvish Captain,Elvish Druid" 2 (
             terrain=*^F*
             x=3-34
             y=13-31
@@ -487,6 +480,25 @@ _f, _f, Re, _f
         [recall]
             id=Jarek
         [/recall]
+
+#ifdef HARD
+        [recall]
+            type=Royal Guard, Pikeman, Swordsman, Javelineer, Master Bowman, Longbowman, Spearman, Bowman
+        [/recall]
+        [recall]
+            type=Royal Guard, Pikeman, Swordsman, Javelineer, Master Bowman, Longbowman, Spearman, Bowman
+        [/recall]
+#else
+        [recall]
+            type=Royal Guard, Pikeman, Swordsman, Javelineer, Master Bowman, Longbowman, Spearman, Bowman
+        [/recall]
+        [recall]
+            type=Royal Guard, Pikeman, Swordsman, Javelineer, Master Bowman, Longbowman, Spearman, Bowman
+        [/recall]
+        [recall]
+            type=Royal Guard, Pikeman, Swordsman, Javelineer, Master Bowman, Longbowman, Spearman, Bowman
+        [/recall]
+#endif
 
         [message]
             speaker=Deoran
@@ -621,7 +633,7 @@ _f, _f, Re, _f
                     radius=1
 
                     [filter_radius]
-                        terrain=R*,Gg,C*,K*,*^V*
+                        terrain=R*^*,Gg,C*,K*,*^V*
 
                         [or]
                             terrain=*^F*
@@ -672,7 +684,7 @@ _f, _f, Re, _f
         # them
         [store_locations]
             [not]
-                terrain=R*
+                terrain=R*^*
             [/not]
             y=10-35
             find_in=urza_movement_area
@@ -1051,19 +1063,19 @@ _f, _f, Re, _f
             [have_unit]
                 side=2
                 race=bats,undead
-                count=0-50
+                count=0-30
             [/have_unit]
 
             [then]
                 {VARIABLE got_a_quick_one_this_turn no}
 
                 [repeat]
-                    times="$(min($turn_number - 2, 5))"
+                    times="$(min($turn_number - $first_undead_spawn_turn, 5))"
 
                     [do]
                         {VARIABLE_OP undead_spawn_x rand "11..22"}
 
-                        # If there's already been a quick unit (ghost or bat)
+                        # If there's already been a quick unit (bat)
                         # spawned this turn, don't make any more
                         [if]
                             [variable]
@@ -1081,9 +1093,9 @@ _f, _f, Re, _f
 
                             [else]
 #ifdef EASY
-                                {VARIABLE_OP undead_spawn_type rand "Ghost,Bone Shooter,Revenant,Blood Bat,Necrophage"}
+                                {VARIABLE_OP undead_spawn_type rand "Bone Shooter,Revenant,Blood Bat,Necrophage"}
 #else
-                                {VARIABLE_OP undead_spawn_type rand "Wraith,Bone Shooter,Revenant,Deathblade,Blood Bat,Dread Bat,Necrophage"}
+                                {VARIABLE_OP undead_spawn_type rand "Bone Shooter,Revenant,Deathblade,Blood Bat,Dread Bat,Necrophage"}
 #endif
                             [/else]
                         [/if]
@@ -1091,7 +1103,7 @@ _f, _f, Re, _f
                         # This checks whether the current spawn is going to be a
                         # "quick" one, so on the next repeat the above [if] will
                         # know whether we've already gotten a quick one this turn
-                        {VARIABLE quick_spawn_types "Ghost,Wraith,Blood Bat,Dread Bat"}
+                        {VARIABLE quick_spawn_types "Blood Bat,Dread Bat"}
                         [if]
                             [variable]
                                 name=quick_spawn_types
@@ -1133,6 +1145,52 @@ _f, _f, Re, _f
         [endlevel]
             result=defeat
         [/endlevel]
+    [/event]
+
+    [event]
+        name=time over
+
+        [remove_shroud]
+            [filter_side]
+                side=1
+            [/filter_side]
+            x=16-23
+            y=0-5
+        [/remove_shroud]
+        [lift_fog]
+            [filter_side]
+                side=1
+            [/filter_side]
+            x=16-23
+            y=0-5
+            multiturn=yes
+        [/lift_fog]
+        [redraw]
+            side=1
+            clear_shroud=yes
+        [/redraw]
+
+        [unit]
+            type=Elvish Marshal
+            side=3
+            id=Ithelden
+            name= _ "Ithelden"
+            animate=yes
+            x,y=20,1
+        [/unit]
+        {GENERIC_UNIT 3 (Elvish Hero) 19 2}
+        {GENERIC_UNIT 3 (Elvish Captain) 21 2}
+        {GENERIC_UNIT 3 (Elvish Marksman) 19 1}
+        {GENERIC_UNIT 3 (Elvish Druid) 21 1}
+
+        [message]
+            speaker=Ithelden
+            message= _ "So, these pitiful humans are still alive? Good. I will have the pleasure of crushing them myself."
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "We took too long to escape these forests..."
+        [/message]
     [/event]
 
     # Deoran exits the forest.
