TSG S7b: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -5,10 +5,9 @@
     name= _ "Pebbles in the Flood"
     next_scenario=08b_The_Tides_of_War
 
-    {SCENARIO_MUSIC elvish-theme.ogg}
+    {SCENARIO_MUSIC heroes_rite.ogg}
     {EXTRA_SCENARIO_MUSIC the_king_is_dead.ogg}
     {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
-    {EXTRA_SCENARIO_MUSIC heroes_rite.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/07b_Pebbles_in_the_Flood.map}"
 
@@ -61,8 +60,8 @@
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 200 300 400}
-        {INCOME 50 75 100}
+        {GOLD 150 200 250}
+        {INCOME 30 40 50}
 
         canrecruit=yes
         [ai]
@@ -77,7 +76,7 @@
                 value=10.0
             [/goal]
         [/ai]
-        recruit=Wraith, Shadow, Skeleton, Revenant, Draug, Bone Shooter, Blood Bat, Chocobone
+        recruit=Deathblade, Revenant, Draug, Bone Shooter, Blood Bat, Chocobone
         {FLAG_VARIANT undead}
     [/side]
 
@@ -91,8 +90,8 @@
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 200 250 300}
-        {INCOME 0 0 0}
+        {GOLD 100 150 200}
+        {INCOME 20 25 30}
 
         canrecruit=yes
         [ai]
@@ -100,13 +99,13 @@
             aggression=0.95
         [/ai]
 #ifdef EASY
-        recruit=Walking Corpse
+        recruit=Walking Corpse, Soulless, Ghoul, Vampire Bat
 #endif
 #ifdef NORMAL
-        recruit=Walking Corpse, Soulless
+        recruit=Walking Corpse, Soulless, Ghoul, Blood Bat
 #endif
 #ifdef HARD
-        recruit=Walking Corpse, Soulless, Ghoul
+        recruit=Walking Corpse, Soulless, Ghoul, Blood Bat, Necrophage
 #endif
         {FLAG_VARIANT undead}
     [/side]
@@ -123,43 +122,91 @@
 
         [modify_side]
             side=1
-            {GOLD 250 200 150}
+            {GOLD 125 100 75}
         [/modify_side]
 
         # Sgt. Finde's Section
 
-        {NAMED_GENERIC_UNIT 1 Sergeant 5 11 (Finde) (_"Finde")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 Spearman 4 10 (Maelvas) (_"Maelvas")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 Spearman 5 10 (Orome) (_"Orome")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 Peasant 6 10 (Mitche) (_"Mitche")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 1 Sergeant 2 9 (Finde) (_"Finde")}
+        {NAMED_LOYAL_UNIT 1 Peasant 3 9 (Maelvas) (_"Maelvas")}
+        {NAMED_LOYAL_UNIT 1 Spearman 4 9 (Orome) (_"Orome")}
+        {NAMED_LOYAL_UNIT 1 Peasant 2 8 (Mitche) (_"Mitche")}
 
         # Lt. Illan's Section
 
-        {NAMED_GENERIC_UNIT 1 (Lieutenant) 13 12 (Illan) (_"Illan")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Heavy Infantryman) 13 13 (Rheban) (_"Rheban")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Horseman) 14 12 (Jul) (_"Jul")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 1 (Lieutenant) 11 10 (Illan) (_"Illan")}
+        {NAMED_LOYAL_UNIT 1 (Heavy Infantryman) 11 11 (Rheban) (_"Rheban")}
+        {NAMED_LOYAL_UNIT 1 (Bowman) 10 10 (Jul) (_"Jul")}
+
 
         # Lt. Meris' Section
 
-        {NAMED_GENERIC_UNIT 1 (Lieutenant) 35 11 (Meris) (_"Meris")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Peasant) 34 10 (Findlas) (_"Findlas")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Bowman) 33 10 (Chumet) (_"Chumet")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Heavy Infantryman) 33 11 (Neras) (_"Neras")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 1 (Bowman) 34 11 (Eera) (_"Eera")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 1 (Lieutenant) 21 10 (Meris) (_"Meris")}
+        {NAMED_LOYAL_UNIT 1 (Heavy Infantryman) 21 11 (Findlas) (_"Findlas")}
+        {NAMED_LOYAL_UNIT 1 (Heavy Infantryman) 22 10 (Chumet) (_"Chumet")}
+
+        # Sgt. Cadry's Section
+
+        {NAMED_LOYAL_UNIT 1 Sergeant 29 10 (Cadry) (_"Cadry")}
+        {NAMED_LOYAL_UNIT 1 (Peasant) 30 9 (Seran) (_"Seran")}
+        {NAMED_LOYAL_UNIT 1 (Bowman) 29 9 (Eera) (_"Eera")}
+        {NAMED_LOYAL_UNIT 1 Peasant 31 9 (Maelvas) (_"Maelvas")}
 
         # Ancient Lich's Guards
 
-        {NAMED_GENERIC_UNIT 2 Draug 26 23 () (_"Death Guard")} {GUARDIAN}
-        {NAMED_GENERIC_UNIT 2 Draug 29 22 () (_"Death Guard")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 Draug 22 17 () (_"Death Guard")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 Draug 25 17 () (_"Death Guard")} {GUARDIAN}
 
-        {MODIFY_UNIT x,y=24-40,5-25 facing sw}
+        # Advancing Undead
+
+#ifdef EASY
+        {LOYAL_UNDEAD_UNIT 2 Chocobone 18 14}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 21 13}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 29 16}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 2 14}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 9 13}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 23 16}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 32 10}
+#endif
+#ifdef NORMAL
+        {LOYAL_UNDEAD_UNIT 2 Chocobone 18 14}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 21 13}
+        {LOYAL_UNDEAD_UNIT 2 Revenant 29 16}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 2 14}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 9 13}
+        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 23 16}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 32 10}
+#endif
+#ifdef HARD
+        {LOYAL_UNDEAD_UNIT 2 Chocobone 18 14}
+        {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
+        {LOYAL_UNDEAD_UNIT 2 Deathblade 21 13}
+        {LOYAL_UNDEAD_UNIT 2 Revenant 29 16}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 2 14}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 9 13}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 23 16}
+        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 32 10}
+#endif
+
+
+        {MODIFY_UNIT x,y=16-33,1-25 facing sw}
 
         {CLEAR_VARIABLE stored_side_1}
 
-        # Make it impossible for the player to kill him, no matter how lucky.
+        # Make it impossible for the player to kill the enemy leaders, no matter how lucky.
         [modify_unit]
             [filter]
                 id="Mal M'Brin"
+            [/filter]
+            [status]
+                invulnerable=yes
+            [/status]
+        [/modify_unit]
+        [modify_unit]
+            [filter]
+                id="Mal Tera"
             [/filter]
             [status]
                 invulnerable=yes
@@ -172,11 +219,11 @@
         name=start
         [recall]
             id=Sir Gerrick
-            x,y=19,10
+            x,y=16,8
         [/recall]
         [recall]
             id=Urza Afalas
-            x,y=18,9
+            x,y=15,8
         [/recall]
 
         [message]
@@ -232,14 +279,14 @@
             message= _ "You know what the outcome of our battle here will be. I trust you to protect our home from the undead and only ask you to remember those who fell defending our land. Farewell, Sir Deoran!"
         [/message]
 
-        {MOVE_UNIT id=Deoran 18 5}
+        {MOVE_UNIT id=Deoran 16 5}
 
         [message]
             speaker=Deoran
             message= _ "We will never forget your sacrifice here. Thank you, my friend."
         [/message]
 
-        {MOVE_UNIT id=Deoran 17 1}
+        {MOVE_UNIT id=Deoran 15 1}
 
         [store_unit]
             [filter]
@@ -290,21 +337,42 @@
         first_time_only=no
 
         [filter]
-            side=2
+            side=1
         [/filter]
         [gold]
-            side=2
+            side=2,3
 #ifdef EASY
-            amount=50
+            amount=10
 #endif
 #ifdef NORMAL
-            amount=65
+            amount=15
 #endif
 #ifdef HARD
-            amount=80
+            amount=20
 #endif
         [/gold]
     [/event]
+    [event]
+        name=die
+        first_time_only=no
+
+        [filter]
+            side=2,3
+        [/filter]
+        [gold]
+            side=2,3
+#ifdef EASY
+            amount=4
+#endif
+#ifdef NORMAL
+            amount=6
+#endif
+#ifdef HARD
+            amount=8
+#endif
+        [/gold]
+    [/event]
+
 
     [event]
         name=last breath
@@ -351,7 +419,9 @@
 
         [kill]
             side=1
-            {EVERYWHERE}
+            [not]
+                x,y=recall,recall
+            [/not]
             fire_event=no
             animate=no
         [/kill]
@@ -375,6 +445,14 @@
         [modify_unit]
             [filter]
                 id="Mal M'Brin"
+            [/filter]
+            [status]
+                invulnerable=no
+            [/status]
+        [/modify_unit]
+        [modify_unit]
+            [filter]
+                id="Mal Tera"
             [/filter]
             [status]
                 invulnerable=no
