Add unit placed for resolve unit dis
If the unit diseapear after attack event but reapear after attack end then unit placed is necessary for erase forced_cth special ( if unit reappear in same scenario else umc develloper must put event in scenarion where unit return).

--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -697,6 +697,27 @@
             [/unstore_unit]
         [/event]
     [/event]
+    [event]
+            name=unit placed
+            delayed_variable_substitution=yes
+
+			[filter]
+				[filter_wml]
+					[attack]
+						[specials]
+							[chance_to_hit]
+								id=forced_cth
+							[/chance_to_hit]
+						[/specials]
+					[/attack]
+				[/filter_wml]
+			[/filter]
+
+			[transform_unit]
+				id=$unit.id
+				transform_to=$unit.type
+			[/transform_unit]
+	[/event]
 #enddef
 
 #define LOOT AMOUNT SIDE
