NR S2: Filter units by id in micro_ai

--- a/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
@@ -125,10 +125,7 @@
         # The second one suplements him, he hinders units to overcome his ZoC.
         # The Steelwart can't move; the Fighter is controlled by an Micro AI.
         {NOTRAIT_UNIT () "Dwarvish Steelclad" 31 28} {GUARDIAN} {NO_UPKEEP} {FACING se}
-        {NOTRAIT_UNIT () "Dwarvish Fighter" 27 28} {NO_UPKEEP}
-        [+unit]
-            role=dwarvish_return_guard
-        [/unit]
+        {NAMED_NOTRAIT_UNIT () "Dwarvish Fighter" 27 28 (dwarvish_return_guard) ()} {NO_UPKEEP}
 
         {NOTRAIT_UNIT () "Dwarvish Stalwart" 28 21} {GUARDIAN} {NO_UPKEEP}
         {NOTRAIT_UNIT () "Dwarvish Stalwart" 32 21} {GUARDIAN} {NO_UPKEEP}
@@ -212,10 +209,7 @@
         canrecruit=yes
 
         # controlled by Micro AI, more meatshield than guard
-        {NOTRAIT_UNIT () "Skeleton Archer" 24 2} {NO_UPKEEP}
-        [+unit]
-            role=skeleton_return_guard
-        [/unit]
+        {NAMED_NOTRAIT_UNIT () "Skeleton Archer" 24 2 (skeleton_return_guard) ()} {NO_UPKEEP}
     [/side]
 
     # And an empty side for the bat used in flavor event
@@ -848,9 +842,8 @@
             side=4
             ai_type=return_guardian
             action=add
-            [filter]
-                role=dwarvish_return_guard
-            [/filter]
+
+            id=dwarvish_return_guard
             return_x,return_y=27,28
         [/micro_ai]
     [/event]
@@ -864,9 +857,8 @@
             side=8
             ai_type=return_guardian
             action=add
-            [filter]
-                role=skeleton_return_guard
-            [/filter]
+
+            id=skeleton_return_guard
             return_x,return_y=24,2
         [/micro_ai]
     [/event]
