TSG S2: dialogue and event changes

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -222,21 +222,6 @@
                         boolean_not_equals=yes
                     [/variable]
                 [/show_if]
-                description= _ "Occupy the Citadel of Westin"
-                condition=win
-            [/objective]
-            [objective]
-                [show_if]
-                    [variable]
-                        name=citadel_secured
-                        boolean_equals=yes
-                    [/variable]
-                    [not]
-                        [have_unit]
-                            id=Minister Hylas
-                        [/have_unit]
-                    [/not]
-                [/show_if]
                 description= _ "Bring Deoran to the Citadel of Westin"
                 condition=win
             [/objective]
@@ -285,12 +270,6 @@
             x,y=22,13
         [/filter]
 
-        {VARIABLE citadel_secured "yes"}
-
-        [modify_turns]
-            {QUANTITY add 5 5 4}
-        [/modify_turns]
-
         # Check if it is Deoran. If not, tell him to go to Westin.
         [if]
             [have_unit]
@@ -306,7 +285,7 @@
                 [/message]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "Excellent, but there is still no sign of Sir Loris. Sir Deoran, you should take command of the keep."
+                    message= _ "Excellent, but the battle is not won yet, and there is still no sign of Sir Loris. Sir Deoran, you should secure the keep."
                 [/message]
                 [show_objectives][/show_objectives]
             [/then]
@@ -322,8 +301,10 @@
             x,y=22,13
         [/filter]
 
+        {VARIABLE citadel_secured "yes"}
+
         [modify_turns]
-            {QUANTITY add 12 11 11}
+            {QUANTITY add 17 16 15}
         [/modify_turns]
 
         [remove_item]
@@ -502,14 +483,17 @@
                     {IS_LOYAL}
                 [/unit]
 
-                #po : deplorable means awful or terrible
                 [message]
                     speaker=Absu
-                    message= _ "Freedom! Sir Knight, please allow me to join you in fighting off these deplorable thugs."
+                    message= _ "The red and white banners of the South Guard! This is a welcome change from the bandits who have been trying to ransack my home."
                 [/message]
                 [message]
                     speaker=Deoran
-                    message= _ "Of course! With your help, these bandits will stand no chance against us!"
+                    message= _ "Indeed, we have come to drive off these vile. Would you like to join us in our battle to restore peace to Westin?"
+                [/message]
+                [message]
+                    speaker=Absu
+                    message= _ "It would be an honor to fight alongside you, Sir Knight."
                 [/message]
             [/then]
             [else]
