--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -381,7 +381,7 @@
 
         {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 9 4 (Linderion) (_"Linderion")}
         {NAMED_LOYAL_UNIT 3 (Elvish Marksman) 13 4 (Mithalwe) (_"Mithalwe")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 7 7 (Sidaurios) (_"Sidaurios")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Marshal) 7 7 (Ithelden) (_"Ithelden")}
         {NAMED_LOYAL_UNIT 3 (Elvish Avenger) 15 7 (Eltenmir) (_"Eltenmir")}
         {NAMED_LOYAL_UNIT 3 (Elvish Hero) 9 10 (Vardanos) (_"Vardanos")}
         {NAMED_LOYAL_UNIT 3 (Elvish Outrider) 13 10 (Talchar) (_"Talchar")}
@@ -433,13 +433,13 @@
         [/message]
 
         [message]
-            speaker=Ethiliel
+            speaker=Ithelden
             message= _ "We sent you a messenger regarding the undead, did we not? You were forewarned of the blight marching upon your land, and yet you did not prepare adequately."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "I do not aim to make excuses, my lady, but I have been here for scarcely a week! I do not know why the previous commander did not act on your advice, but I assure you that I will not make the same mistakes he did!"
+            message= _ "I do not aim to make excuses, but I have been here for scarcely a week! I do not know why the previous commander did not act on your advice, but I assure you that I will not make the same mistakes he did!"
         [/message]
 
         [message]
@@ -493,22 +493,27 @@
         [/message]
 
         [message]
-            speaker=Ethiliel
-            message= _ "Enough, all of you. Human, you are indeed brave to face such foes, but I fear that you will fall to the darkness if you choose to fight it alone. There is one elf who still remembers the secrets of the undead that we learned when Haldric I came to our land. His name is Mebrin, and he lives secluded in the hills south of here."
-        [/message]
-
-        [message]
-            speaker=Sidaurios
-            message= _ "Ethiliel, surely you are not—"
+            speaker=Ithelden
+            message= _ "Enough, all of you. Ethiliel is the only one of us who has encountered the undead — she will be the best judge of what aid we would grant the humans against these abominations."
         [/message]
 
         [message]
             speaker=Ethiliel
-            message= _ "<i>I</i> will accompany the human and his men to Mebrin. I will not ask you to place yourselves in danger for these humans, but you will not presume to tell me what to do. Is that fair?"
+            message= _ "These men are indeed brave to face such foes, but I fear that they will fall to the darkness if they fight it alone. There is one elf who still remembers the secrets of the undead that we learned when Haldric I came to our land. His name is Mebrin, and he lives secluded in the hills south of here."
         [/message]
 
         [message]
-            speaker=Sidaurios
+            speaker=Ithelden
+            message= _ "Are you sure about this? The road south is no longer as safe as it once was, and Mebrin is not as powerful as he once was. You would not presume to put one of our great sages in danger, Ethiliel."
+        [/message]
+
+        [message]
+            speaker=Ethiliel
+            message= _ "<i>I</i> will accompany the human and his men to Mebrin, and he can decide whether or not he wants to help us. I will not ask you to place yourselves in danger for these humans, but you will not presume to tell me—nor Mebrin—what to do. Is that fair?"
+        [/message]
+
+        [message]
+            speaker=Ithelden
             message= _ "Yes, very well."
         [/message]
 
