--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -514,6 +514,8 @@
     #!         greater_than=10
     #!     [/variable]
     #! )}
+    # WARNING : if an unit must disappear in mid-battle before attack end was fired, recrrate unit instead to unstore or cth modifications 
+    # persist. Or don't use this macro.
     [event]
         name=attack
         first_time_only=no
@@ -564,6 +566,9 @@
                         id=forced_cth
                         value={CTH_NUMBER}
                         cumulative=no
+                        [filter_opponent]
+                            {SECOND_FILTER}
+                        [/filter_opponent]
                     [/value]
                 [/set_variables]
             [/do]
@@ -657,6 +662,9 @@
                         id=forced_cth
                         value={CTH_NUMBER}
                         cumulative=no
+                        [filter_opponent]
+                            {SECOND_FILTER}
+                        [/filter_opponent]
                     [/value]
                 [/set_variables]
             [/do]
