--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -247,6 +247,8 @@
 		<Unit filename="../../src/cursor.hpp" />
 		<Unit filename="../../src/deprecation.cpp" />
 		<Unit filename="../../src/deprecation.hpp" />
+		<Unit filename="../../src/desktop/battery_info.cpp" />
+		<Unit filename="../../src/desktop/battery_info.hpp" />
 		<Unit filename="../../src/desktop/clipboard.cpp" />
 		<Unit filename="../../src/desktop/clipboard.hpp" />
 		<Unit filename="../../src/desktop/notifications.cpp" />
@@ -257,6 +259,8 @@
 		<Unit filename="../../src/desktop/paths.hpp" />
 		<Unit filename="../../src/desktop/version.cpp" />
 		<Unit filename="../../src/desktop/version.hpp" />
+		<Unit filename="../../src/desktop/windows_battery_info.cpp" />
+		<Unit filename="../../src/desktop/windows_battery_info.hpp" />
 		<Unit filename="../../src/desktop/windows_tray_notification.cpp" />
 		<Unit filename="../../src/desktop/windows_tray_notification.hpp" />
 		<Unit filename="../../src/display.cpp" />
