--- a/data/core/macros/ai_controller.cfg
+++ b/data/core/macros/ai_controller.cfg
@@ -1,6 +1,7 @@
 #textdomain wesnoth
 
 #define AI_CONTROLLER_ALLOW_UNIT_CONTROL CONTROLLER_SIDE UNIT_ID
+    #deprecated 3 1.17 A replacement is not currently provided.
     # Right-click content menu item for issuing instructions to an allied AI unit
     [store_unit]
         [filter]
@@ -50,6 +51,7 @@
 #enddef
 
 #define AI_CONTROLLER_ALLOW_LEADER_CONTROL CONTROLLER_SIDE CONTROLLED_SIDE
+    #deprecated 3 1.17 A replacement is not currently provided.
     # Right-click content menu item for issuing instructions to an allied AI side's leader
     [store_unit]
         [filter]
@@ -97,6 +99,7 @@
 #enddef
 
 #define AI_CONTROLLER_NOTE
+    #deprecated 3 1.17 A replacement is not currently provided.
     # Note for the objectives that instructions can be issued to an allied AI side
     [note]
         description= _ "In this scenario, you may issue instructions to an allied side by right-clicking on a unit that belongs to it."
@@ -104,6 +107,7 @@
 #enddef
 
 #define AI_CONTROLLER AFFIX PLAYER_SIDES ALLY_SIDES VARIABLES_WML
+    #deprecated 3 1.17 A replacement is not currently provided.
     # Right-click content menu item for issuing instructions to an allied AI side
     [event]
         name=prestart
@@ -1001,10 +1005,12 @@ Behavior: $ai_controller.side_$ally_side|_current_settings.currently_doing_behav
 #enddef
 
 #define DISABLE_AI_CONTROLLER AFFIX
+    #deprecated 3 1.17 A replacement is not currently provided.
     {VARIABLE ai_controller_{AFFIX}.enabled no}
 #enddef
 
 #define DISABLE_AI_CONTROLLER_FOR_SIDE AFFIX SIDE
+    #deprecated 3 1.17 A replacement is not currently provided.
     [if]
         [variable]
             name=ai_controller_{AFFIX}.disabled_for_sides
@@ -1038,6 +1044,7 @@ Behavior: $ai_controller.side_$ally_side|_current_settings.currently_doing_behav
 #enddef
 
 #define ENABLE_AI_CONTROLLER_FOR_SIDE AFFIX SIDE
+    #deprecated 3 1.17 A replacement is not currently provided.
     [if]
         [variable]
             name=ai_controller_{AFFIX}.disabled_for_sides
@@ -1097,6 +1104,7 @@ Behavior: $ai_controller.side_$ally_side|_current_settings.currently_doing_behav
 #enddef
 
 #define AI_CONTROLLER_FUTURE_STRINGS
+    #deprecated 3 1.17 A replacement is not currently provided.
     # These will be used for the special orders menu and the order for telling
     # the ally leader to move someplace
     future_string_1= _ "Set special orders..."  #wmllint: ignore
