TSG S7b: adjusted gold values

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -61,7 +61,7 @@
         controller=ai
 
         {GOLD 150 200 250}
-        {INCOME 15 20 25}
+        {INCOME 10 15 20}
 
         canrecruit=yes
         [ai]
@@ -122,7 +122,7 @@
 
         [modify_side]
             side=1
-            {GOLD 125 100 75}
+            {GOLD 150 125 100}
         [/modify_side]
 
         # Sgt. Finde's Section
@@ -150,7 +150,7 @@
         {NAMED_LOYAL_UNIT 1 Sergeant 29 10 (Cadry) (_"Cadry")}
         {NAMED_LOYAL_UNIT 1 (Peasant) 30 9 (Seran) (_"Seran")}
         {NAMED_LOYAL_UNIT 1 (Bowman) 29 9 (Eera) (_"Eera")}
-        {NAMED_LOYAL_UNIT 1 Peasant 31 9 (Maelvas) (_"Maelvas")}
+        {NAMED_LOYAL_UNIT 1 (Peasant) 31 9 (Cinry) (_"Cinry")}
 
         # Ancient Lich's Guards
 
@@ -342,13 +342,13 @@
         [gold]
             side=2,3
 #ifdef EASY
-            amount=10
+            amount=9
 #endif
 #ifdef NORMAL
-            amount=15
+            amount=12
 #endif
 #ifdef HARD
-            amount=20
+            amount=15
 #endif
         [/gold]
     [/event]
