WML: {REMOVE_LABEL} now takes an optional EXTRA_WML argument.

--- a/data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg
@@ -502,11 +502,7 @@
                 [remove_item]
                     x,y=6,32
                 [/remove_item]
-                [label]
-                    x,y=6,32
-                    text="" # wmllint: ignore
-                    team_name=elves
-                [/label]
+                {REMOVE_LABEL 6 32 EXTRA_WML=team_name=elves}
                 [scroll_to]
                     x,y=6,32
                 [/scroll_to]
