--- a/data/core/macros/interface-utils.cfg
+++ b/data/core/macros/interface-utils.cfg
@@ -87,6 +87,8 @@
 #enddef
 
 #define REMOVE_LABEL X Y
+#arg EXTRA_WML
+#endarg
     # Removes a label from a given tile.
     #
     # For example, remove it from 4,7
@@ -95,6 +97,7 @@
         x={X}
         y={Y}
         text="" # wmllint: ignore
+        {EXTRA_WML}
     [/label]
 #enddef
 
